.helm/adhoc/old-hostname.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voluba-old-hostname-ingress
  labels:
    name: voluba-old-hostname-ingress
spec:
  rules:
  - host: voluba.apps.hbp.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: voluba-prod
            port: 
              number: 8080
  tls:
  - secretName: voluba-old-hostname-secret
    hosts:
    - voluba.apps.hbp.eu
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voluba-old-lbe-hostname-ingress
  labels:
    name: voluba-old-lbe-hostname-ingress
spec:
  rules:
  - host: voluba-linear-backend.apps.hbp.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: voluba-backend
            port: 
              number: 8080
  tls:
  - secretName: voluba-lbe-old-hostname-secret
    hosts:
    - voluba-linear-backend.apps.hbp.eu
